# FGJ-2024

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  fgj_2024-3dd56cb9afc70fde.js  fgj_2024-4ddae0ac21ce732f.js  fgj_2024-4f128e21631e16e.js  fgj_2024-a114e84dcf9b79a7.js  fgj_2024-c7cbd973b92fa031.js  flake.nix  index.html  rust-toolchain
.github/workflows/: cd.yml  ci.yml  continuous_deployment.yml
assets/: atlas_manifest.toml  building1.tiff  car.tiff  car.xcf  pavement_turn.xcf  tilemap.ldtk
assets/arrow/: arrow.xcf
assets/building1/: building1.xcf  building1_atlas.xcf
assets/building2/: building2.xcf  ceiling.xcf
assets/bus/: bus.xcf
assets/car/: car.xcf
assets/dialogues/: a.json  p1.dialogue.json  p2.dialogue.json  passenger.dialogues.json
assets/grass/: grass.xcf
assets/headlights/: headlights.xcf
assets/music/: Game Jam.mscz
assets/music/.mscbackup/: .Game Jam.mscz~
assets/pavement/: pavement.xcf
assets/pavement_cross/: pavement_cross.xcf
assets/pavement_t/: pavement_t.xcf  sidewalk_border_curve.xcf
assets/pavement_turn/: pavement_turn.xcf
assets/pole/: pole.xcf
assets/sidewalk_concrete/: border_generic.xcf  sidewalk_concrete.xcf
assets/splash_screen/: division.xcf  unfake.xcf
assets/tilemap/: .gitignore
assets/tilemap/simplified/Level_0/: Map.csv
src/: appstate.rs  atlas_loader.rs  buildings.rs  car.rs  components.rs  constants.rs  dialogues.rs  main.rs  missions.rs  parallax.rs  piece.rs  pointer.rs  road.rs  sidewalk.rs  systems.rs  tilemap.rs  trigger.rs  ui.rs  utility.rs
