[package]
name = "FGJ-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[dependencies]
bevy = "0.12.1"