[package]
name = "fgj_2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Default to dynamic compilation. Then remove for release in CI/CD
[features]
default = ["fast-compile"]
fast-compile = ["bevy/dynamic_linking"]

[dependencies]
bevy = "0.12.1"
bevy-inspector-egui = { version = "0.22.1", default-features = false }
bevy_egui = { version = "0.24.0", features = ["serde"] }
bevy_rapier2d = "0.24.0"
serde_json = "1.0.112"
serde = "1.0.196"
toml = "0.8"
bevy_common_assets = { version = "0.9.0", features = ["json"] }
bevy_splash_screen = "0.5.0"
bevy_tweening = "0.9.0"

[patch.crates-io]
bevy_tweening = { git = "https://github.com/SergioRibera/bevy_tweening", branch = "infinite_mirrored" }
